attempts to resolve responsive whitespace

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -153,7 +153,8 @@ nav > :nth-child(n):hover {
 }
 
 .Bug > .container {
-  max-height: 30.55rem;
+  /* max-height: 30.55rem; */
+  max-height: 73vh;
   overflow: auto;
   padding-left: 6px
 }
